# rudra

./: .gitignore  Cargo.toml  impl-spec-v1-outdated.md  impl-spec-v1.md  impl-spec-v2.md  next.txt  notes.txt  prompt-settings.txt  save  spec-v3.md  spec-v4.md  spec-v5.md  test.txt
customs/: custom-python-wip.rs
src/: custom.rs  document.rs  document2.rs  document3.rs  lib.rs  main.rs  save_load.rs  serialization.rs  spawn_section.rs  ui.rs
