[package]
name = "rudra"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "ui",                            # bevy_ui + the renderer pieces UI needs
    "experimental_bevy_ui_widgets",  # the standard widget set — see note below
    "bevy_window",
    "bevy_winit",
    "x11", "wayland",                # platform windowing backends
] }
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }                        # binary save format (§9.5)
serde_json = "1"                     # JSON export (§9.5)


# Modest opt-level for our crate keeps debug builds responsive;
# `package."*" = 3` keeps dependencies (like Bevy) fast.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3